# rng-harness

./: CMakeLists.txt  Makefile  main.cpp  rngharness  rngharness.kdev4  secure_prng.hpp
